tests/qd/compile_errors/check_on_non_fallible.qd
// Test: cannot use ? on non-fallible function

fn normal_add(a:i64 b:i64 -- c:i64) {
	add
}

fn main() {
	10 20 normal_add?
	if {
		. nl
	} else {
		drop "Error" . nl
	}
}
